--- a/src/pages/ListarTarefas/style.css
+++ b/src/pages/ListarTarefas/style.css
@@ -1,11 +1,12 @@
 .table-responsive {
   border-radius: 30px;
-  box-shadow: 10px 10px 10px #001c7f, -10px -10px 10px #0026ab;
+  box-shadow: 10px 10px 10px #001c7f, 
+              -10px -10px 10px #0026ab;
 }
 
 #tabela thead tr th {
   border: none;
-  background: #1134ad;
+  /* background: #1134ad; */
   color: #a1b1f9;
 }
 
@@ -13,9 +14,18 @@
   border: none;
   background: #5f6cfc;
   color: #f6f8ff;
-  box-shadow: 5px 5px 5px #0e2c93, -5px -5px 5px #143cc7;
+  box-shadow: 5px 5px 5px #001c7f, 
+              -5px -5px 5px #0026ab;
+  opacity: 1;
+  transition: opacity 0.2s;
+}
+
+#tabela thead tr th a:hover {
+  opacity: 0.9;
 }
 
 #tabela thead tr th a:active {
-  box-shadow: inset 5px 5px 5px #515cd6, inset -5px -5px 5px #6d7cff;
+  box-shadow: inset 5px 5px 5px #515cd6, 
+              inset -5px -5px 5px #6d7cff;
+  opacity: 1;
 }
